--- a/建模分析_AI/Q3.md
+++ b/建模分析_AI/Q3.md
@@ -31,7 +31,7 @@ $$\max_{\mathbf{x}} f(\mathbf{x}) = \text{length} \left( I_1(\mathbf{x}) \cup I_
 最后，我们将几何约束延伸至时空维度，以精确界定投放与引爆的时机。视线遮蔽原理在X轴上的投影，要求在任意时刻，烟幕云团的X坐标必须小于导弹的X坐标（$P_{cloud\_x} < P_{missile\_x}$），否则云团将位于导弹之后，无法对$X=0$处的真目标形成遮蔽。这意味着，系统中所有的关键物理事件（投放、引爆），都必须在导弹的X坐标抵达该事件发生点的X坐标之前完成。
 
 为实施这一根本性约束，我们设计了“软硬结合”的双重剪枝策略：
-* **静态“硬”边界**：在优化启动前，我们首先通过求解一个“最坏情况”下的运动学模型（即无人机以最慢速度飞行），预先计算出导弹追上无人机的保守时间上限 $T_{limit\_conservative}$。我们将此上限作为不可逾越的物理边界，对优化器 `bounds` 中所有时间相关的决策变量（$t_{drop1}, t_{fuze1,2,3}$）的搜索范围进行一次全局性的、大幅度的“硬”压缩。
+* **静态“硬”边界**：在优化启动前，我们首先通过求解一个“最坏情况”下的运动学模型（即无人机以最快速度飞行），预先计算出导弹追上无人机的保守时间上限 $T_{limit\_conservative}$。我们将此上限作为不可逾越的物理边界，对优化器 `bounds` 中所有时间相关的决策变量（$t_{drop1}, t_{fuze1,2,3}$）的搜索范围进行一次全局性的、大幅度的“硬”压缩。
 * **动态“软”边界**：该保守上限是一个全局估计。对于优化过程中任何一个具体的候选解（特定的$\theta, v_{uav}$），其精确的拦截时限是动态变化的。为此，我们在目标函数内部嵌入了一个惩罚机制。对于每一个被评估的候选解，系统会实时检验其是否在整个生命周期内都满足 $P_{missile\_x} < P_{drone\_x} + 10$ （10m为考虑烟幕半径的保守余量）这一动态约束。任何违反该约束的解，都将被立即赋予一个极大的惩罚成本，从而被优化算法自然淘汰。
 
 #### **3. 最终求解框架**
